2003-04-02  Bernhard Held <bernhard@bernhardheld.de>

	* Makefile.common.in: unused PORT, SCC and SAS removed, fixed docdir
	* configure.in: big cleanup, updated to autoconf 2.5x
	* configure: rebuilt from configure.in
	* sdccconf_in.h: new RETSIGTYPE, and other PATHs
	* sdcc_vc_in.h: reflect changes from sdccconf.h
	* doc/Makefile: fixed a flaw in "make install"

2003-04-02    <johan@balder>

	* src/ds390/gen.c (genCmp): no comments
	* src/mcs51/gen.c (genCmp): no comments
	* src/SDCCopt.c (eBBlockFromiCode): detect missing return values
	* src/SDCCast.c (ast_print): fixed the function type in --dumptree

2003-04-01  Bernhard Held <bernhard@bernhardheld.de>

	* support/regression/generate-cases.py: place generated file in given sub directory
	* support/regression/ports/host/spec.mk: prevent removal of testfwk.o
	* support/regression/Makefile: improvements for 'make -j';
	side effect: it's simpler and faster now

2003-03-31  Borut Razem <borut.razem@siol.net>

	* src/z80/main.c: link-{port} and as-{port} defined without path
	* src/src.dsp: support/Util/MySystem.h and src/SDCCutil.h added to project

2003-03-31  Bernhard Held <bernhard@bernhardheld.de>

	* Makefile, src/Makefile.in: add dependencies, so that 'make -j' works

2003-03-30  Borut Razem <borut.razem@siol.net>

	* support/Util/BuildCmd.c, support/Util/BuildCmd.h: rewrite buildCmdLine(),
	  changed type of list parameter to set
	* src/ds390/main.c: changed type of parameter asmOptions to set in _tininative_do_assemble()
	* src/port.h: changed type of do_assemble() parameter to set
	* src/SDCCmain.c: type of asmOptions changed to set, introduced setParseWithComma(),
	  sdcpp defined without path, removed variable VersionString, introduced set binPathSet,
	  definition of "cppoutfilename" macro with NULL value in preProcess()
	* src/SDCCglobl.h: included "SDCCset.h", added declaration of setParseWithComma()
	* src/SDCCglue.c: removed variable VersionString, inroduced spacesToUnderscores()